add swagger ui all ofertas ehcache
